--- a/client/views/home/loginButtons/login.html
+++ b/client/views/home/loginButtons/login.html
@@ -24,9 +24,7 @@
     {{/if}}
     <div class="userNavFooter">
       <div id="login-buttons-logout">logout</div>
-      <div class="btn btn-default btn-success">my place
-       <i class="fa fa-refresh"></i>
-      </div>
+      <a href="{{ pathFor 'place'}}" class= "goPlace btn btn-default btn-success">my place <i class="fa fa-refresh"></i></a>
     </div>
   </div>
  </div>
