--- a/client/views/home/signIn.html
+++ b/client/views/home/signIn.html
@@ -23,7 +23,7 @@
         {{> entryError}}
         {{#unless otherLoginServices}}
           <div class="email-option">
-            <h3 id = "signInTitle">or SIGN IN</h3>
+            <h3 id = "signInTitle">did you forget to sign in ?</h3>
           </div>
         {{/unless}}
         {{#if passwordLoginService}}
