--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -74,7 +74,7 @@
       <div class="div3 titleDiv">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Title
         <!-- since forms kind of mess things up we added some style -->
-        <input style="margin-right: 70px" name="title" type="text" value="" placeholder="Acct. 102 Textbook, Roommate Wanted..." class = " titleInputPost"/>
+        <input style="margin-right: 70px" name="title" type="text" value="" placeholder="Acct. 102 Textbook, Roommate Wanted..." class = "inputPost"/>
         Price
         <input name="price" type="text" value="" placeholder="$25" class = "inputPost price"/> 
       </div>
